# lorri

./: .envrc  .gitignore  CONTRIBUTING.md  Cargo.nix  Cargo.toml  LICENSE  MAINTAINERS.md  README.md  build.rs  default.nix  lorri.1  release.nix  shell.nix
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.nix  ci.yml
contrib/: daemon.md  lorri.service
nix/: carnix.patch  ci.nix  nixpkgs-1909.json  nixpkgs-1909.nix  nixpkgs-20_09.json  nixpkgs-20_09.nix  nixpkgs-21_05.json  nixpkgs-21_05.nix  nixpkgs-22_05.json  nixpkgs-22_05.nix  nixpkgs-stable.json  nixpkgs-stable.nix  overlay.nix  overrides.nix  update-dependencies.sh  update-nix.sh
nix/carnix/: crates-io.nix
nix/ci/: default.nix  execline.nix  lib.nix  sandbox.nix  troubled-tests.nix
src/: build_loop.rs  builder.rs  cas.rs  changelog.rs  cli.rs  constants.rs  daemon.rs  default-envrc  error.rs  lib.rs  locate_file.rs  logged-evaluation.nix  logging.rs  main.rs  nix.rs  ops.rs  org.nixos.lorri.internal.varlink  org.nixos.lorri.varlink  org_nixos_lorri.rs  org_nixos_lorri_internal.rs  osstrlines.rs  pathreduction.rs  project.rs  run_async.rs  socket.rs  thread.rs  trivial-shell.nix  watch.rs
src/daemon/: client.rs  internal_proto.rs  server.rs
src/ops/: daemon.rs  direnv.rs  error.rs  info.rs  ping.rs  shell.rs  start_user_shell.rs  upgrade.nix  upgrade.rs  watch.rs
src/ops/direnv/: envrc.bash  mod.rs
src/project/: roots.rs
src/socket/: communicate.rs  path.rs  read_writer.rs
tests/daemon/: main.rs
tests/integration/: bug110_duplicate_appends.rs  bug23_gopath.rs  bug23_setuphook.rs  bug97_varmap_leak.rs  direnv.rs  direnvtestcase.rs  envrc.rs  envrctestcase.rs  gc.rs  main.rs  trivial.rs
tests/shell/: main.rs
(+1 files in other folders)
