[package]
name = "lorri"
# lorri uses a MAJOR.MINOR versioning scheme, see MAINTAINERS.md for details.
# Cargo requires MAJOR.MINOR.PATCH. So we translate lorri's versioning scheme
# to MAJOR.MINOR.0, i.e. the PATCH part is always zero.
version = "1.4.0" # Format: MAJOR.MINOR.0
authors = [
  "Graham Christensen <graham.christensen@target.com>",
  "Profpatsch <mail@profpatsch.de>"
]
homepage = "https://github.com/nix-community/lorri"
license = "Apache-2.0"
edition = "2018"

# before updating dependencies: we want to keep the rustc compatible with 1.41.0 for now (start of 2020).
[dependencies]
# central features
notify = "= 5.0.0-pre.1"
atomicwrites = "0.2.5"
crossbeam-channel = "0.3.8"
nix = "0.20.0"
regex = "1.4.3"
tempfile = "3.1.0"
anyhow = "1.0"
thiserror = "1.0"

# TODO: update to 0.3
structopt.version = "0.2"
structopt.default-features = false
structopt.features = [
    # "default",
    "suggestions",
    "color",
    # "wrap_help",
    # "yaml",
    # "debug",
    "no_cargo",
    # "doc" (enables yaml)
  ]
# logging
slog = "2.7.0"
slog-scope = "4.3.0"
slog-term = "2.5.0"
fastrand = "1.4.0"
# serialization
serde = "1.0.88"
serde_derive = "1.0.88"
serde_json = "1.0.38"
bincode = "1.3.2"
# nice-to-have
ctrlc = { version = "3.1.8", features = ["termination"] }
directories = "3.0.1"
lazy_static = "1.4.0"
md5  = "0.7.0"
vec1 = "1.1.0"
human-panic = { path = "vendor/human-panic" }

[dev-dependencies]
# 1.0.0 requires at least rust 1.50
proptest.version = "0.10.1"
proptest.default-features = false
proptest.features = [
  "std",
  # reenable if proptest kills the test runner
  # "fork",
  # "timeout"
]
